--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="untitled-1.css">
+  </head>
+  <body>
+    <h1>hello</h1>
+    <a href="https://www.google.com/?hl=ja">google</a>
 
+  </body>
+</html>
