--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <h1>hello</h1>
     <a href="https://www.google.com/?hl=ja">google</a>
-
+    <?php
+     for($i=1; $i<= 5; $i++){
+      echo $i;
+     }
+    ?>
   </body>
 </html>
